[package]
authors       = ["Havunen <sampo.kivisto@live.fi>"]
description   = "Collection of UniCase datastructures"
name = "unicase_collections"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository    = "https://github.com/Havunen/unicase_collections.git"

[dependencies]
unicase = "2.7.0"
indexmap = "2.1.0"

[features]
bench = []

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = true

[dev-dependencies]
criterion = "0.5.1"
